# Adventures-in-SDL2

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README-SDL.txt  README.md
share/images/: banneer.txt  cave_bluelarge.txt  sunsetintheswamp.txt
share/levels/image/: 00.txt  01.txt
share/levels/intro/: 00.txt
share/levels/mainloop/: 00.txt  01.txt  03.txt
share/levels/ttf/: 01.txt  02.txt
share/sounds/: door14.txt  ploep1.txt
share/sounds/intro/: old-music-box-1.txt
share/text/: .gitattributes
share/text/credits/: credits.txt
share/text/final/: final.txt
share/text/image/: dialog.txt
share/text/init/: init.txt
share/text/intro/: about.txt  dialog.txt  intro.txt
share/text/mainloop/: dialog.txt  mainloop.txt
share/text/misc/: misc.txt
share/text/render/: render.txt
share/text/textinput/: dialog.txt  input.txt  intro.txt
share/text/ttf/: dialog.txt  ttf.txt
src/: App.cpp  App.h  ClockDecor.cpp  ClockDecor.h  Config.cpp  Config.h  Conversation.cpp  Conversation.h  Director.h  Display.cpp  Display.h  Exception.h  FinalScene.cpp  FinalScene.h  FmtTextDecor.cpp  FmtTextDecor.h  ImageScene.cpp  ImageScene.h  InitScene.cpp  InitScene.h  IntroScene.cpp  IntroScene.h  Layer.cpp  Layer.h  Level.cpp  Level.h  LevelDecor.cpp  LevelDecor.h  MainLoopScene.cpp  MainLoopScene.h  MiscScene.cpp  MiscScene.h  PagedTextDecor.cpp  PagedTextDecor.h  Player.cpp  Player.h  PlayerDecor.cpp  PlayerDecor.h  PreloadScene.cpp  PreloadScene.h  (+22 more)
